# mricom_user_pack

./: .gitignore  README.md
anl/: README.md
anl/japan_sea/: Makefile  README.md  anim_sst.py  contour_heat_content-anm.py  contour_heat_content.py  contour_heatflux.py  contour_heatflux_anom.py  contour_heatwave_thres.py  contour_s.py  contour_ssh.py  contour_sst-anom.py  contour_sst.py  contour_t.py  contour_t_anom.py  contour_t_anom_mo.py  contour_t_section-anom.py  contour_t_section.py  contour_t_vel.py  contour_t_yt.py  contour_t_zt-anom.py  contour_t_zt.py  data.py  data_heatflux.py  data_month.py  data_sal.py  data_ssh.py  judge_heatwave_ave.py  make_heatwave_thres_ave.py  make_jra3q_ave.py  make_jra3q_clim.py  make_jra3q_seagrid.py  make_seagrid.py  make_sst_ave.py  make_strait_transport_netcdf.py  make_t_3d_ave.py  map_brank.py  plot_bathymetry.py  plot_heatflux_ave.py  plot_heatwave.py  plot_heatwave_days.py  (+8 more)
anl/japan_sea/tests/: test_all.sh
anl/rectangle/: README.md  contour_dept.py  contour_dept_section.py  contour_ssh.py  contour_t.py  contour_t_section.py  vec_wind.py
anl/rectangle/tests/: test_all.sh
lib/: mricom.py  xarray_maker.py
link/: .gitignore  README.md
prep/: README.md
prep/format_conv/: conv_grib2_to_netcdf.sh
prep/grib2/: CMakeLists.txt  README.md  compile.sh  conv_grib2_to_netcdf.sh  conv_to_netcdf-jra3q.sh  conv_to_netcdf-movejpn.sh  download_netcdf_cmake.sh  submit.sh
prep/grib2/src/: main.F90
